# Secure_Messaging_Application

./: .gitignore  README.md
blockchain/abi/: MessageDigest.json
blockchain/contracts/: MessageDigest.sol
blockchain/scripts/: deploy.py
blockchain/verification/: index.html
blockchain/verification/css/: style.css
blockchain/verification/js/: verify.js
client/cpp/: CMakeLists.txt  README.md
client/cpp/include/: Client.hpp  Conversation.hpp  Message.hpp  MessageStore.hpp  User.hpp
client/cpp/src/: Client.cpp  Conversation.cpp  Message.cpp  MessageStore.cpp  User.cpp  main.cpp
client/web/: index.html
client/web/css/: style.css
client/web/js/: app.js
docs/: cover_document.md  crypto_design.md  network_architecture.md  nginx.conf.example  pentest_report.md  schema.md  ssl_cert_verification.md  vulnerability_componenet_review.md
server/: .env.example  http_client.py  requirements.txt  run.py  wsgi.py
server/app/: __init__.py  auth_routes.py  blockchain.py  config.py  crypto.py  db.py  extensions.py  jwt_utils.py  models.py  password_utils.py  routes.py  validators.py
server/database/: schema.sql
server/database/migrations/: 001_initial_schema.sql  002_crypto_additions.sql  003_blockchain.sql
server/tests/: conftest.py  test_ssl_verification.py
